--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,18 @@ dependencies:
   intl: ^0.16.0
   sqflite: ^1.1.7
   path_provider: ^1.3.0
+  flutter_launcher_icons: ^0.8.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
